--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -153,6 +153,7 @@ xcopy /y C:\Development\SDL2_ttf-2.0.15\lib\x64\*.dll $(OutDirFullPath)</Command
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="enemy_spawn_system.cpp" />
     <ClCompile Include="external\imgui\backends\imgui_impl_sdl.cpp" />
     <ClCompile Include="external\imgui\backends\imgui_impl_sdlrenderer.cpp" />
     <ClCompile Include="external\imgui\imgui.cpp" />
@@ -163,17 +164,24 @@ xcopy /y C:\Development\SDL2_ttf-2.0.15\lib\x64\*.dll $(OutDirFullPath)</Command
     <ClCompile Include="game_layer.cpp" />
     <ClCompile Include="input_system.cpp" />
     <ClCompile Include="layer_stack.cpp" />
+    <ClCompile Include="lifetime_system.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="menu_layer.cpp" />
+    <ClCompile Include="velocity_system.cpp" />
+    <ClCompile Include="weapon_system.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="components.h" />
+    <ClInclude Include="enemy_spawn_system.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="game_layer.h" />
     <ClInclude Include="input_system.h" />
     <ClInclude Include="layer.h" />
     <ClInclude Include="layer_stack.h" />
+    <ClInclude Include="lifetime_system.h" />
     <ClInclude Include="menu_layer.h" />
+    <ClInclude Include="velocity_system.h" />
+    <ClInclude Include="weapon_system.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
