--- a/ChristmasProject2021.vcxproj.filters
+++ b/ChristmasProject2021.vcxproj.filters
@@ -25,6 +25,10 @@
     <ClCompile Include="menu_layer.cpp" />
     <ClCompile Include="game_layer.cpp" />
     <ClCompile Include="input_system.cpp" />
+    <ClCompile Include="enemy_spawn_system.cpp" />
+    <ClCompile Include="weapon_system.cpp" />
+    <ClCompile Include="velocity_system.cpp" />
+    <ClCompile Include="lifetime_system.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -34,6 +38,10 @@
     <ClInclude Include="game_layer.h" />
     <ClInclude Include="components.h" />
     <ClInclude Include="input_system.h" />
+    <ClInclude Include="enemy_spawn_system.h" />
+    <ClInclude Include="weapon_system.h" />
+    <ClInclude Include="velocity_system.h" />
+    <ClInclude Include="lifetime_system.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="imgui">
