--- a/ChristmasProject2021.vcxproj.filters
+++ b/ChristmasProject2021.vcxproj.filters
@@ -29,6 +29,7 @@
     <ClCompile Include="weapon_system.cpp" />
     <ClCompile Include="velocity_system.cpp" />
     <ClCompile Include="lifetime_system.cpp" />
+    <ClCompile Include="tile_map.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -42,6 +43,7 @@
     <ClInclude Include="weapon_system.h" />
     <ClInclude Include="velocity_system.h" />
     <ClInclude Include="lifetime_system.h" />
+    <ClInclude Include="tile_map.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="imgui">
