--- a/ChristmasProject2021.vcxproj.filters
+++ b/ChristmasProject2021.vcxproj.filters
@@ -30,6 +30,7 @@
     <ClCompile Include="velocity_system.cpp" />
     <ClCompile Include="lifetime_system.cpp" />
     <ClCompile Include="tile_map.cpp" />
+    <ClCompile Include="simplex_noise.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -44,6 +45,7 @@
     <ClInclude Include="velocity_system.h" />
     <ClInclude Include="lifetime_system.h" />
     <ClInclude Include="tile_map.h" />
+    <ClInclude Include="simplex_noise.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="imgui">
