--- a/ChristmasProject2021.vcxproj.filters
+++ b/ChristmasProject2021.vcxproj.filters
@@ -25,13 +25,12 @@
     <ClCompile Include="menu_layer.cpp" />
     <ClCompile Include="game_layer.cpp" />
     <ClCompile Include="input_system.cpp" />
-    <ClCompile Include="enemy_spawn_system.cpp" />
+    <ClCompile Include="enemy_system.cpp" />
     <ClCompile Include="weapon_system.cpp" />
     <ClCompile Include="velocity_system.cpp" />
     <ClCompile Include="lifetime_system.cpp" />
     <ClCompile Include="tile_map.cpp" />
     <ClCompile Include="simplex_noise.cpp" />
-    <ClCompile Include="enemy_behaviour_system.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -41,13 +40,12 @@
     <ClInclude Include="game_layer.h" />
     <ClInclude Include="components.h" />
     <ClInclude Include="input_system.h" />
-    <ClInclude Include="enemy_spawn_system.h" />
+    <ClInclude Include="enemy_system.h" />
     <ClInclude Include="weapon_system.h" />
     <ClInclude Include="velocity_system.h" />
     <ClInclude Include="lifetime_system.h" />
     <ClInclude Include="tile_map.h" />
     <ClInclude Include="simplex_noise.h" />
-    <ClInclude Include="enemy_behaviour_system.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="imgui">
