Adding statemachine and state objects

--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -167,6 +167,10 @@ xcopy /y C:\Development\SDL2_ttf-2.0.15\lib\x64\*.dll $(OutDirFullPath)</Command
     <ClCompile Include="main.cpp" />
     <ClCompile Include="menu_layer.cpp" />
     <ClCompile Include="simplex_noise.cpp" />
+    <ClCompile Include="state_game.cpp" />
+    <ClCompile Include="state_post_game.cpp" />
+    <ClCompile Include="state_pre_game.cpp" />
+    <ClCompile Include="state_machine.cpp" />
     <ClCompile Include="tile_map.cpp" />
     <ClCompile Include="velocity_system.cpp" />
     <ClCompile Include="weapon_system.cpp" />
@@ -181,6 +185,11 @@ xcopy /y C:\Development\SDL2_ttf-2.0.15\lib\x64\*.dll $(OutDirFullPath)</Command
     <ClInclude Include="lifetime_system.h" />
     <ClInclude Include="menu_layer.h" />
     <ClInclude Include="simplex_noise.h" />
+    <ClInclude Include="state.h" />
+    <ClInclude Include="state_game.h" />
+    <ClInclude Include="state_machine.h" />
+    <ClInclude Include="state_post_game.h" />
+    <ClInclude Include="state_pre_game.h" />
     <ClInclude Include="tile_map.h" />
     <ClInclude Include="velocity_system.h" />
     <ClInclude Include="weapon_system.h" />
