--- a/ChristmasProject2021.vcxproj.filters
+++ b/ChristmasProject2021.vcxproj.filters
@@ -30,6 +30,10 @@
     <ClCompile Include="lifetime_system.cpp" />
     <ClCompile Include="tile_map.cpp" />
     <ClCompile Include="simplex_noise.cpp" />
+    <ClCompile Include="state_machine.cpp" />
+    <ClCompile Include="state_pre_game.cpp" />
+    <ClCompile Include="state_game.cpp" />
+    <ClCompile Include="state_post_game.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -44,6 +48,11 @@
     <ClInclude Include="lifetime_system.h" />
     <ClInclude Include="tile_map.h" />
     <ClInclude Include="simplex_noise.h" />
+    <ClInclude Include="state_machine.h" />
+    <ClInclude Include="state.h" />
+    <ClInclude Include="state_pre_game.h" />
+    <ClInclude Include="state_game.h" />
+    <ClInclude Include="state_post_game.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="imgui">
