--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -184,6 +184,7 @@ xcopy /y C:\Development\SDL2_ttf-2.0.15\lib\x64\*.dll $(OutDirFullPath)</Command
     <ClInclude Include="layer_stack.h" />
     <ClInclude Include="lifetime_system.h" />
     <ClInclude Include="menu_layer.h" />
+    <ClInclude Include="random.h" />
     <ClInclude Include="simplex_noise.h" />
     <ClInclude Include="state.h" />
     <ClInclude Include="state_game.h" />
