--- a/ChristmasProject2021.vcxproj.filters
+++ b/ChristmasProject2021.vcxproj.filters
@@ -35,6 +35,7 @@
     <ClCompile Include="state_game.cpp" />
     <ClCompile Include="state_post_game.cpp" />
     <ClCompile Include="SDL_FontCache.c" />
+    <ClCompile Include="sprite_system.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -56,6 +57,7 @@
     <ClInclude Include="state_post_game.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="SDL_FontCache.h" />
+    <ClInclude Include="sprite_system.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="imgui">
