--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -162,6 +162,7 @@ xcopy /y C:\Development\SDL2_mixer-2.0.4\lib\x64\*.dll $(OutDirFullPath)</Comman
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="animation_system.cpp" />
     <ClCompile Include="enemy_system.cpp" />
     <ClCompile Include="external\imgui\backends\imgui_impl_sdl.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
@@ -222,6 +223,7 @@ xcopy /y C:\Development\SDL2_mixer-2.0.4\lib\x64\*.dll $(OutDirFullPath)</Comman
     <ClCompile Include="weapon_system.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="animation_system.h" />
     <ClInclude Include="components.h" />
     <ClInclude Include="enemy_system.h" />
     <ClInclude Include="game.h" />
@@ -244,6 +246,9 @@ xcopy /y C:\Development\SDL2_mixer-2.0.4\lib\x64\*.dll $(OutDirFullPath)</Comman
     <ClInclude Include="utils.h" />
     <ClInclude Include="velocity_system.h" />
     <ClInclude Include="weapon_system.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="TODO.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
