--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -123,7 +123,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>game_pch.h</PrecompiledHeaderFile>
@@ -152,6 +152,7 @@ xcopy /y C:\Development\SDL2_mixer-2.0.4\lib\x64\*.dll $(OutDirFullPath)</Comman
       <LanguageStandard>stdcpp17</LanguageStandard>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>game_pch.h</PrecompiledHeaderFile>
+      <AdditionalIncludeDirectories>src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -162,8 +163,6 @@ xcopy /y C:\Development\SDL2_mixer-2.0.4\lib\x64\*.dll $(OutDirFullPath)</Comman
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="animation_system.cpp" />
-    <ClCompile Include="enemy_system.cpp" />
     <ClCompile Include="external\imgui\backends\imgui_impl_sdl.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
@@ -188,64 +187,64 @@ xcopy /y C:\Development\SDL2_mixer-2.0.4\lib\x64\*.dll $(OutDirFullPath)</Comman
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="game.cpp" />
-    <ClCompile Include="game_layer.cpp" />
-    <ClCompile Include="game_pch.cpp">
+    <ClCompile Include="src\ecs\systems\animation_system.cpp" />
+    <ClCompile Include="src\ecs\systems\enemy_system.cpp" />
+    <ClCompile Include="src\ecs\systems\lifetime_system.cpp" />
+    <ClCompile Include="src\ecs\systems\sprite_system.cpp" />
+    <ClCompile Include="src\ecs\systems\velocity_system.cpp" />
+    <ClCompile Include="src\ecs\systems\weapon_system.cpp" />
+    <ClCompile Include="src\game.cpp" />
+    <ClCompile Include="src\game_pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="layer.cpp" />
-    <ClCompile Include="layer_stack.cpp" />
-    <ClCompile Include="lifetime_system.cpp" />
-    <ClCompile Include="main.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Use</PrecompiledHeader>
-    </ClCompile>
-    <ClCompile Include="menu_layer.cpp" />
-    <ClCompile Include="SDL_FontCache.c">
+    <ClCompile Include="src\layers\game_layer.cpp" />
+    <ClCompile Include="src\layers\layer.cpp" />
+    <ClCompile Include="src\layers\layer_stack.cpp" />
+    <ClCompile Include="src\layers\menu_layer.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\SDL_FontCache.c">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <WarningLevel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">TurnOffAllWarnings</WarningLevel>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">_CRT_SECURE_NO_WARNINGS;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
       <WarningLevel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">TurnOffAllWarnings</WarningLevel>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|x64'">_CRT_SECURE_NO_WARNINGS;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+    <ClCompile Include="src\simplex_noise.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="simplex_noise.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
-    </ClCompile>
-    <ClCompile Include="sprite_system.cpp" />
-    <ClCompile Include="state_game.cpp" />
-    <ClCompile Include="state_post_game.cpp" />
-    <ClCompile Include="state_pre_game.cpp" />
-    <ClCompile Include="state_machine.cpp" />
-    <ClCompile Include="tile_map.cpp" />
-    <ClCompile Include="velocity_system.cpp" />
-    <ClCompile Include="weapon_system.cpp" />
+    <ClCompile Include="src\states\state_game.cpp" />
+    <ClCompile Include="src\states\state_machine.cpp" />
+    <ClCompile Include="src\states\state_post_game.cpp" />
+    <ClCompile Include="src\states\state_pre_game.cpp" />
+    <ClCompile Include="src\tile_map.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="animation_system.h" />
-    <ClInclude Include="components.h" />
-    <ClInclude Include="enemy_system.h" />
-    <ClInclude Include="game.h" />
-    <ClInclude Include="game_layer.h" />
-    <ClInclude Include="game_pch.h" />
-    <ClInclude Include="layer.h" />
-    <ClInclude Include="layer_stack.h" />
-    <ClInclude Include="lifetime_system.h" />
-    <ClInclude Include="menu_layer.h" />
-    <ClInclude Include="random.h" />
-    <ClInclude Include="SDL_FontCache.h" />
-    <ClInclude Include="simplex_noise.h" />
-    <ClInclude Include="sprite_system.h" />
-    <ClInclude Include="state.h" />
-    <ClInclude Include="state_game.h" />
-    <ClInclude Include="state_machine.h" />
-    <ClInclude Include="state_post_game.h" />
-    <ClInclude Include="state_pre_game.h" />
-    <ClInclude Include="tile_map.h" />
-    <ClInclude Include="utils.h" />
-    <ClInclude Include="velocity_system.h" />
-    <ClInclude Include="weapon_system.h" />
+    <ClInclude Include="src\ecs\components\components.h" />
+    <ClInclude Include="src\ecs\systems\animation_system.h" />
+    <ClInclude Include="src\ecs\systems\enemy_system.h" />
+    <ClInclude Include="src\ecs\systems\lifetime_system.h" />
+    <ClInclude Include="src\ecs\systems\sprite_system.h" />
+    <ClInclude Include="src\ecs\systems\velocity_system.h" />
+    <ClInclude Include="src\ecs\systems\weapon_system.h" />
+    <ClInclude Include="src\game.h" />
+    <ClInclude Include="src\game_pch.h" />
+    <ClInclude Include="src\layers\game_layer.h" />
+    <ClInclude Include="src\layers\layer.h" />
+    <ClInclude Include="src\layers\layer_stack.h" />
+    <ClInclude Include="src\layers\menu_layer.h" />
+    <ClInclude Include="src\random.h" />
+    <ClInclude Include="src\SDL_FontCache.h" />
+    <ClInclude Include="src\simplex_noise.h" />
+    <ClInclude Include="src\states\state.h" />
+    <ClInclude Include="src\states\state_game.h" />
+    <ClInclude Include="src\states\state_machine.h" />
+    <ClInclude Include="src\states\state_post_game.h" />
+    <ClInclude Include="src\states\state_pre_game.h" />
+    <ClInclude Include="src\tile_map.h" />
+    <ClInclude Include="src\utils.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="TODO.txt" />
