--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -78,13 +78,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Development\SDL2-2.0.18\include;C:\Development\SDL2_image-2.0.5\include;C:\Development\SDL2_ttf-2.0.15\include;C:\Development\SDL2_mixer-2.0.4\include;C:\Development\ChristmasProject2021\external\imgui;C:\Development\ChristmasProject2021\external\entt\single_include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Development\SDL2-2.0.18\include;C:\Development\SDL2_image-2.0.5\include;C:\Development\SDL2_ttf-2.0.15\include;C:\Development\SDL2_mixer-2.0.4\include;C:\Development\ChristmasProject2021\external\imgui;C:\Development\ChristmasProject2021\external\entt\single_include;C:\Development\ChristmasProject2021\external\spdlog\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Development\SDL2-2.0.18\lib\x64;C:\Development\SDL2_image-2.0.5\lib\x64;C:\Development\SDL2_ttf-2.0.15\lib\x64;C:\Development\SDL2_mixer-2.0.4\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <LibraryPath>C:\Development\SDL2-2.0.18\lib\x64;C:\Development\SDL2_image-2.0.5\lib\x64;C:\Development\SDL2_ttf-2.0.15\lib\x64;C:\Development\SDL2_mixer-2.0.4\lib\x64;$(LibraryPath)</LibraryPath>
-    <IncludePath>C:\Development\SDL2-2.0.18\include;C:\Development\SDL2_image-2.0.5\include;C:\Development\SDL2_ttf-2.0.15\include;C:\Development\SDL2_mixer-2.0.4\include;C:\Development\ChristmasProject2021\external\imgui;C:\Development\ChristmasProject2021\external\entt\single_include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Development\SDL2-2.0.18\include;C:\Development\SDL2_image-2.0.5\include;C:\Development\SDL2_ttf-2.0.15\include;C:\Development\SDL2_mixer-2.0.4\include;C:\Development\ChristmasProject2021\external\imgui;C:\Development\ChristmasProject2021\external\entt\single_include;C:\Development\ChristmasProject2021\external\spdlog\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
