--- a/ChristmasProject2021.vcxproj.filters
+++ b/ChristmasProject2021.vcxproj.filters
@@ -68,6 +68,7 @@
     <ClCompile Include="src\simplex_noise.cpp" />
     <ClCompile Include="src\tile_map.cpp" />
     <ClCompile Include="src\ecs\systems\cleanup_system.cpp" />
+    <ClCompile Include="src\utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="imgui">
