--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -125,6 +125,7 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\audio_factory.cpp" />
     <ClCompile Include="src\ecs\systems\animation_system.cpp" />
     <ClCompile Include="src\ecs\systems\cleanup_system.cpp" />
     <ClCompile Include="src\ecs\systems\enemy_system.cpp" />
@@ -140,6 +141,7 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClCompile Include="src\layers\game_layer.cpp" />
     <ClCompile Include="src\layers\layer.cpp" />
     <ClCompile Include="src\layers\layer_stack.cpp" />
+    <ClCompile Include="src\layers\loading_layer.cpp" />
     <ClCompile Include="src\layers\menu_layer.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\SDL_FontCache.c">
@@ -162,6 +164,7 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClCompile Include="src\utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\audio_factory.h" />
     <ClInclude Include="src\ecs\components\components.h" />
     <ClInclude Include="src\ecs\systems\animation_system.h" />
     <ClInclude Include="src\ecs\systems\cleanup_system.h" />
@@ -175,6 +178,7 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
     <ClInclude Include="src\layers\game_layer.h" />
     <ClInclude Include="src\layers\layer.h" />
     <ClInclude Include="src\layers\layer_stack.h" />
+    <ClInclude Include="src\layers\loading_layer.h" />
     <ClInclude Include="src\layers\menu_layer.h" />
     <ClInclude Include="src\random.h" />
     <ClInclude Include="src\SDL_FontCache.h" />
