--- a/ChristmasProject2021.vcxproj
+++ b/ChristmasProject2021.vcxproj
@@ -168,6 +168,7 @@ xcopy /y $(SDL_MIXER_PATH)\lib\x64\*.dll $(OutDirFullPath)</Command>
   <ItemGroup>
     <ClInclude Include="src\audio_factory.h" />
     <ClInclude Include="src\ecs\components\components.h" />
+    <ClInclude Include="src\ecs\components\inspectors.h" />
     <ClInclude Include="src\ecs\systems\animation_system.h" />
     <ClInclude Include="src\ecs\systems\cleanup_system.h" />
     <ClInclude Include="src\ecs\systems\enemy_system.h" />
